--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,22 @@ requires-python = ">=3.13"
 dependencies = [
     "arviz>=0.22.0",
     "choix>=0.4.1",
+    "firthmodels>=0.1.1",
     "ipykernel>=7.0.1",
+    "jax>=0.8.0",
     "jupyter>=1.1.1",
+    "jupyter-book>=2.0.0a0",
+    "marginaleffects>=0.2.2",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "patsy>=1.0.2",
     "pymc>=5.26.1",
     "rpy2>=3.6.4",
     "scipy>=1.16.2",
     "seaborn>=0.13.2",
     "shortuuid>=1.0.13",
     "snakeviz>=2.2.2",
+    "statsmodels>=0.14.5",
+    "torch>=2.9.1",
 ]
